* Now disabling CUDA for any error during the cuInit() like when an external GPU is unplugged (issue #493)
* Compiling the code with LUXCORE_DISABLE_OIDN defined will disable Intel OIDN (for platforms where it is not available like Apple M1)
* Fixed halt condition rendering stop code when using both eye and light tracing parameters (issue #497)
* Change sphere light implementation to provide an alternative to the point light fallback (issue #443)
* Fixed a compiler error when running with CUDA on Ampere GPUs (issue BlendLuxCore#626)
* Fixed a crash when using an image pipeline with only NOP plugin
* CPU code now rejects NaN/Inf sample values for AOVs like GPU code
* Avoid to generate NaN volume transmittance if the segment is infinite

RC1 released

* Fixed a problem when using the DIRECT_DIFFUSE_REFLECT AOV (issue #517)
* Fixed a crash when using CPU-only image pipeline plugins but image pipeline GPU support is still enabled

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.
* Light emitted by motion blurred triangle lights is approximated using the triangle area of time 0.0 (computing triangle area at runtime would be expansive) so it may be not totally accurate if the motion blur transformation include a scale.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe) and
[Intel C++ redistributable](https://software.intel.com/sites/default/files/managed/59/aa/ww_icl_redist_msi_2018.3.210.zip).